# Divvy-Bikeshare-Project

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini  utill.py
.github/workflows/: tests.yml
src/etl/: extract.py  load.py  transform.py
src/extract/: extract.py
src/helpers/: util.py  util_extract.py  util_load.py  util_tests.py  util_transform.py
src/load/: load.py
src/transform/: transform.py
tests/: test_extract.py  test_extract_metadata.py  test_extract_zipfile.py  test_load.py  test_transform.py
