[metadata]
name = extract
description = extract zipfile from web
author = Eyob Tadele-Manhardt 
license = MIT
platform = unix, linux, osx, cygwin, win32
classifiers =
  Programming language :: Python :: 3.10

[options]
packages = 
  extract
install_requires =
  pandas 
  selenium 
  certifi
python_requires = >=3.9
package_dir = 
  =src
zip_safe = no

[options.extras_requires]
testing =
  pytest>=6.0
  pytest-cov>2.0
  mypy>0.90
  flake8>=3.9
  tox>=3.24

[options.package_data]
extract = py.typed

[flake8]
max-line-length = 168

# [pytest]
# norecursedirs=tests/helpers