[metadata]
name = etl pipeline
description = Extracts files from web and stores them locally
author = Eyob Tadele-Manhardt 
license = MIT
platform = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10
[options]
packages = 
  etl
install_requires =
  pandas 
  geopandas
  
python_requires = >=3.10
package_dir = 
  =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160